/// This file contains service for the Node RPC Server
syntax = "proto3";

package sonr.node;
import "proto/core/api/call.proto";
option go_package = "github.com/sonr-io/core/pkg/node";

// RPC Service with Equivalent Methods of a binded Node
service HighwayStub {
  // Authorize Signing Method Request for Data
  rpc Authenticate(sonr.api.AuthenticateRequest) returns (sonr.api.AuthenticateResponse) {}

  // Link Links an Additional Device to User
  rpc Link(sonr.api.LinkRequest) returns (sonr.api.LinkResponse) {}

  // Register creates new user in DNS Table
  rpc Register(sonr.api.RegisterRequest) returns (sonr.api.RegisterResponse) {}
}
